--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-04-03  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* lib/fitsarrayvv.c: Changed all occurences of `nul' or `NUL' to
+	`blank' or `BLANK'. The FITS standard defines a BLANK keyword for
+	integer types.
+
+	* include/fitsarrayvv.h: Changed all `NUL' macros to `BLANK'.
+
 2015-04-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/fitsarrayvv.c (changetype): Round floating point input types
