Added test for MakeNoise, input info in headers
A test was added for MakeNoise.

The main array to fits functions in fitsarrayvv.c can now accept a
linked list of headers to add to the output. This was used to add the
input information to the headers of the outputs of ImageWarp and
MakeNoise so the results are more reproducable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* lib/fitsarrayvv.c: Changed all occurences of `nul' or `NUL' to
 	`blank' or `BLANK'. The FITS standard defines a BLANK keyword for
 	integer types.
+	(copyrightandend): Will now right extra headers.
+	(arraytofitsimg): Can now accept header to write to output.
 
 	* include/fitsarrayvv.h: Changed all `NUL' macros to `BLANK'.
 
